samples/_failures_safe/1761538521_d41bd6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59cfb8b1.c: In function ‘main’:
./samples/SAFE/__tmp_59cfb8b1.c:152:43: error: missing terminating " character
  152 |                     print_matrix(&result, "
      |                                           ^
./samples/SAFE/__tmp_59cfb8b1.c:152:21: error: expected expression at end of input
  152 |                     print_matrix(&result, "
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_59cfb8b1.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_59cfb8b1.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_59cfb8b1.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_59cfb8b1.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_59cfb8b1.c:152:21: error: expected declaration or statement at end of input
